--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,6 +39,7 @@ install:
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
   - set TERM=ansi
+  - set GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
@@ -47,7 +48,7 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        bash -i -c "export TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
+        bash -i -c "export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'; export TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
         dir
         bash -ilc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
@@ -60,4 +61,4 @@ install:
       }
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
-  - bash -ilc "cd $APPVEYOR_BUILD_FOLDER; set PLATFORM=%PLATFORM%; ./ci-build.sh"
+  - bash -ilc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
