--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,7 +48,7 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        Invoke-Item "" bash -ilc "export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
+        Invoke-Item bash -ilc "export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
         dir
         bash -ic "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
