--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,7 @@ install:
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
+      du 2> $null
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         bash -ic "export TERM=ansi; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
         dir
