--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,9 +25,12 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
 install:
+  - echo "%APPVEYOR_API_URL%"
   - echo "%APPVEYOR_JOB_ID%"
   - echo "%CACHE_JOB%"
   - echo %CACHE_JOB%
+  - echo "$(CACHE_JOB)"
+  - echo $(CACHE_JOB)
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
@@ -52,9 +55,9 @@ install:
       appveyor PushArtifact blobs.zip -Type Zip &&
       appveyor SetVariable -Name CACHE_JOB -Value %APPVEYOR_JOB_ID% &&
       echo "%CACHE_JOB%" &&
-      echo %CACHE_JOB%
+      echo $(CACHE_JOB)
     ) ELSE (
-      appveyor DownloadFile %APPVEYOR_API_URL%/buildjobs/%CACHE_JOB%/artifacts/blobs.zip -FileName blobs.zip &&
+      appveyor DownloadFile %APPVEYOR_API_URL%/buildjobs/$(CACHE_JOB)/artifacts/blobs.zip -FileName blobs.zip &&
       dir &&
       7z x blobs.zip
     )
