--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,6 +58,9 @@ install:
       bash -ilc "export TERM=ansi; set TERM=ansi; cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake" &&
       7z a blobs.zip compileEGMf.dll emake.exe &&
       appveyor PushArtifact blobs.zip -Type Zip &&
+      echo "%APPVEYOR_API_URL%" &&
+      echo "%APPVEYOR_JOB_ID%" &&
+      echo %APPVEYOR_JOB_ID% &&
       appveyor SetVariable -Name CACHE_JOB -Value "%APPVEYOR_JOB_ID%" &&
       echo "%CACHE_JOB%" &&
       echo ${CACHE_JOB} &&
