--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,6 +36,17 @@ install:
   - echo ${CACHE_JOB}
   - echo "$CACHE_JOB"
   - echo $CACHE_JOB
+  - echo "%APPVEYOR_API_URL%" &&
+    echo "%APPVEYOR_JOB_ID%" &&
+    echo %APPVEYOR_JOB_ID% &&
+    appveyor SetVariable -Name CACHE_JOB -Value "%APPVEYOR_JOB_ID%" &&
+    echo "%CACHE_JOB%" &&
+    echo ${CACHE_JOB} &&
+    echo $CACHE_JOB &&
+    set CACHE_JOB="%APPVEYOR_JOB_ID%" &&
+    echo "%CACHE_JOB%" &&
+    echo ${CACHE_JOB} &&
+    echo $CACHE_JOB
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
@@ -58,17 +69,6 @@ install:
       bash -ilc "export TERM=ansi; set TERM=ansi; cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake" &&
       7z a blobs.zip compileEGMf.dll emake.exe &&
       appveyor PushArtifact blobs.zip -Type Zip &&
-      echo "%APPVEYOR_API_URL%" &&
-      echo "%APPVEYOR_JOB_ID%" &&
-      echo %APPVEYOR_JOB_ID% &&
-      appveyor SetVariable -Name CACHE_JOB -Value "%APPVEYOR_JOB_ID%" &&
-      echo "%CACHE_JOB%" &&
-      echo ${CACHE_JOB} &&
-      echo $CACHE_JOB &&
-      set CACHE_JOB="%APPVEYOR_JOB_ID%" &&
-      echo "%CACHE_JOB%" &&
-      echo ${CACHE_JOB} &&
-      echo $CACHE_JOB
     ) ELSE (
       appveyor DownloadFile %APPVEYOR_API_URL%/buildjobs/%CACHE_JOB%/artifacts/blobs.zip -FileName blobs.zip &&
       dir &&
