--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,11 +39,11 @@ install:
   - echo "%APPVEYOR_API_URL%" &&
     echo "%APPVEYOR_JOB_ID%" &&
     echo %APPVEYOR_JOB_ID% &&
-    appveyor SetVariable -Name CACHE_JOB -Value "%APPVEYOR_JOB_ID%" &&
+    appveyor SetVariable -Name CACHE_JOB -Value %APPVEYOR_JOB_ID% &&
     echo "%CACHE_JOB%" &&
     echo ${CACHE_JOB} &&
     echo $CACHE_JOB &&
-    set CACHE_JOB="%APPVEYOR_JOB_ID%" &&
+    set CACHE_JOB=%APPVEYOR_JOB_ID% &&
     echo "%CACHE_JOB%" &&
     echo ${CACHE_JOB} &&
     echo $CACHE_JOB
