--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,6 +61,7 @@ install:
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
   - set TERM=ansi
+  - appveyor SetVariable -Name TERM -Value ansi
   - set GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
@@ -72,7 +73,7 @@ install:
       make -j 4 &&
       bash -ilc "export TERM=ansi; set TERM=ansi; cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake" &&
       7z a blobs.zip compileEGMf.dll emake.exe &&
-      appveyor PushArtifact blobs.zip -Type Zip &&
+      appveyor PushArtifact blobs.zip -Type Zip
     ) ELSE (
       appveyor DownloadFile %APPVEYOR_API_URL%/buildjobs/%CACHE_JOB%/artifacts/blobs.zip -FileName blobs.zip &&
       dir &&
