--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,11 +33,11 @@ install:
     echo "%HEYHEYHEY%" &&
     set HEYHEYHEY=%APPVEYOR_JOB_ID% &&
     echo "%HEYHEYHEY%" &&
-    setx HEYHEYHEY=%APPVEYOR_JOB_ID% &&
+    setx HEYHEYHEY %APPVEYOR_JOB_ID% &&
     echo "%HEYHEYHEY%" &&
     appveyor SetVariable -Name "HEYHEYHEY" -Value !APPVEYOR_JOB_ID! &&
     echo "%HEYHEYHEY%"
-  - setx PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
+  - setx PATH c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
   - set MSYSTEM_CHOST=x86_64-w64-mingw32
@@ -46,9 +46,9 @@ install:
   - set MINGW_PREFIX=/mingw64
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
-  - setx TERM=ansi
+  - setx TERM ansi
   - appveyor SetVariable -Name TERM -Value ansi
-  - setx GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
+  - setx GCC_COLORS 'error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
