--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,13 +29,13 @@ install:
   - echo "%APPVEYOR_API_URL%"
   - echo "%APPVEYOR_JOB_ID%"
   - echo "%CACHE_JOB%"
-  - set HEYHEYHEY=!APPVEYOR_JOB_ID! &&
+  - set HEYHEYHEY=%APPVEYOR_JOB_ID% &&
     echo "%HEYHEYHEY%" &&
     set HEYHEYHEY=%APPVEYOR_JOB_ID% &&
     echo "%HEYHEYHEY%" &&
     setx HEYHEYHEY %APPVEYOR_JOB_ID% &&
     echo "%HEYHEYHEY%" &&
-    appveyor SetVariable -Name "HEYHEYHEY" -Value !APPVEYOR_JOB_ID! &&
+    appveyor SetVariable -Name "HEYHEYHEY" -Value %APPVEYOR_JOB_ID% &&
     echo "%HEYHEYHEY%"
   - setx PATH c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
