--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,8 @@ install:
     echo "%HEYHEYHEY%" &&
     appveyor SetVariable -Name "HEYHEYHEY" -Value "%APPVEYOR_JOB_ID%" &&
     echo "%HEYHEYHEY%"
-  - setx PATH "c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%"
+  - echo "%HEYHEYHEY%"
+  - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
   - set MSYSTEM_CHOST=x86_64-w64-mingw32
