--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ test: off
 skip_branch_with_pr: true
 environment:
   OUTPUT: /tmp/test.exe
-  HEYHEYHEY:
+  CACHE_JOB:
   matrix:
   #BEGIN WINDOWS
     # Game Modes
