--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,6 +38,9 @@ install:
     appveyor SetVariable -Name "CACHE_JOB" -Value "%APPVEYOR_JOB_ID%" &&
     echo "%CACHE_JOB%"
   - appveyor SetVariable -Name CACHE_JOB -Value %APPVEYOR_JOB_ID%
+  - appveyor SetVariable -Name CACHE_JOB -Value "%APPVEYOR_JOB_ID%"
+  - appveyor SetVariable -Name "CACHE_JOB" -Value %APPVEYOR_JOB_ID%
+  - appveyor SetVariable -Name "CACHE_JOB" -Value "%APPVEYOR_JOB_ID%"
   - echo "%CACHE_JOB%"
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
