--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,10 @@ install:
   - echo "%APPVEYOR_JOB_ID%"
   - echo "%CACHE_JOB%"
   - ps: echo $(CACHE_JOB)
+  - ps: echo $(env:CACHE_JOB)
   - ps: echo ${CACHE_JOB}
+  - ps: echo ${env:CACHE_JOB}
+  - ps: echo $env:CACHE_JOB
   - set "CACHE_JOB=%APPVEYOR_JOB_ID%" &&
     echo "%CACHE_JOB%" &&
     setx CACHE_JOB %APPVEYOR_JOB_ID% &&
