--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,11 +31,18 @@ install:
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
   - echo "%CACHE_JOB%"
-  - appveyor GetVariable -Name CACHE_JOB
   - appveyor SetVariable -Name CACHE_JOB -Value %APPVEYOR_JOB_ID%
   - appveyor SetVariable -Name CACHE_JOB -Value "%APPVEYOR_JOB_ID%"
   - appveyor SetVariable -Name "CACHE_JOB" -Value %APPVEYOR_JOB_ID%
   - appveyor SetVariable -Name "CACHE_JOB" -Value "%APPVEYOR_JOB_ID%"
+  - ps: echo ${env:CACHE_JOB}
+  - ps: echo $env:CACHE_JOB
+  - echo "%CACHE_JOB%"
+  - appveyor SetVariable -Name "CACHE_JOB" -Value "HELLER"
+  - ps: echo ${env:CACHE_JOB}
+  - ps: echo $env:CACHE_JOB
+  - echo "%CACHE_JOB%"
+  - appveyor GetVariable -Name CACHE_JOB
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
   - echo "%CACHE_JOB%"
