--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,6 +43,8 @@ install:
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
   - echo "%CACHE_JOB%"
+  - appveyor GetVariablesForMe -Name CACHE_JOB
+  - appveyor Help
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
