--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,7 +44,8 @@ install:
   - ps: echo $env:CACHE_JOB
   - echo "%CACHE_JOB%"
   - ps: appveyor GetVariablesForMe -Name CACHE_JOB
-  - ps: appveyor Help
+  - cmd: appveyor Help
+  - ps: appveyor --Help
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
