--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,10 @@ shallow_clone: true
 test: off
 # don't build feature branches
 skip_branch_with_pr: true
+init:
+  - ps: echo ${env:CACHE_JOB}
+  - ps: echo $env:CACHE_JOB
+  - echo "%CACHE_JOB%"
 environment:
   OUTPUT: /tmp/test.exe
   CACHE_JOB: "YOUVE GOT A HUGE PROBLEM IF THIS IS THE VALUE BUT APPVEYOR WANTS A DEFAULT TO SHARE GLOBAL VARIABLES"
