--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,8 +8,10 @@ init:
   - ps: echo $(CACHE_JOB)
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
+  - ps: echo $CACHE_JOB
   - echo "%CACHE_JOB%"
   - echo $(CACHE_JOB)
+  - echo $CACHE_JOB
 environment:
   OUTPUT: /tmp/test.exe
   matrix:
@@ -48,8 +50,10 @@ install:
 build_script:
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
+  - ps: echo $CACHE_JOB
   - echo "%CACHE_JOB%"
   - echo $(CACHE_JOB)
+  - echo $CACHE_JOB
   - ps: appveyor SetVariable -Name CACHE_JOB -Value $env:APPVEYOR_JOB_ID%
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
@@ -62,7 +66,9 @@ build_script:
   - ps: appveyor GetVariable -Name CACHE_JOB
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
+  - ps: echo $CACHE_JOB
   - echo "%CACHE_JOB%"
+  - echo $CACHE_JOB
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
