--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,8 @@ init:
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
   - ps: echo $CACHE_JOB
-  - curl %APPVEYOR_API_URL%/api/build/variables
-  - echo curl %APPVEYOR_API_URL%/api/build/variables
+  - curl %APPVEYOR_API_URL%api/build/variables
+  - echo curl %APPVEYOR_API_URL%api/build/variables
   - echo "%CACHE_JOB%"
   - echo $(CACHE_JOB)
   - echo $CACHE_JOB
