--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,7 +56,7 @@ build_script:
   - echo "%CACHE_JOB%"
   - echo $(CACHE_JOB)
   - echo $CACHE_JOB
-  - ps: appveyor SetVariable -Name CACHE_JOB -Value $env:APPVEYOR_JOB_ID%
+  - ps: appveyor SetVariable -Name CACHE_JOB -Value $env:APPVEYOR_JOB_ID
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
   - echo "%CACHE_JOB%"
