--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,11 @@ init:
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
   - ps: echo $CACHE_JOB
-  - curl %APPVEYOR_API_URL%api/build/variables
-  - echo curl %APPVEYOR_API_URL%api/build/variables
+  - curl -v %APPVEYOR_API_URL%api/build/variables
+  - echo curl -v %APPVEYOR_API_URL%api/build/variables
+  - ps: appveyor SetVariable -Name CACHE_JOB -Value $env:APPVEYOR_JOB_ID
+  - curl -v %APPVEYOR_API_URL%api/build/variables
+  - echo curl -v %APPVEYOR_API_URL%api/build/variables
   - echo "%CACHE_JOB%"
   - echo $(CACHE_JOB)
   - echo $CACHE_JOB
