--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,9 @@ test: off
 # don't build feature branches
 skip_branch_with_pr: true
 init:
-  - ps: Invoke-RestMethod -Method Get -Uri "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
+  - echo "%APPVEYOR_API_URL%"
+  - echo "%APPVEYOR_JOB_ID%"
+  - ps: (Invoke-RestMethod -Method Get -Uri "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG").build.jobs[0].jobId
   - ps: echo $(CACHE_JOB)
   - ps: echo ${env:CACHE_JOB}
   - ps: echo $env:CACHE_JOB
@@ -41,8 +43,6 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
 install:
-  - echo "%APPVEYOR_API_URL%"
-  - echo "%APPVEYOR_JOB_ID%"
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
@@ -53,30 +53,7 @@ install:
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
   - setx TERM ansi
-  - appveyor SetVariable -Name TERM -Value ansi
   - setx GCC_COLORS 'error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
-build_script:
-  - ps: echo ${env:CACHE_JOB}
-  - ps: echo $env:CACHE_JOB
-  - ps: echo $CACHE_JOB
-  - echo "%CACHE_JOB%"
-  - echo $(CACHE_JOB)
-  - echo $CACHE_JOB
-  - ps: appveyor SetVariable -Name CACHE_JOB -Value $env:APPVEYOR_JOB_ID
-  - ps: echo ${env:CACHE_JOB}
-  - ps: echo $env:CACHE_JOB
-  - echo "%CACHE_JOB%"
-  - echo $(CACHE_JOB)
-  - set "CACHE_JOB=HELLER"
-  - ps: echo ${env:CACHE_JOB}
-  - ps: echo $env:CACHE_JOB
-  - echo "%CACHE_JOB%"
-  - ps: appveyor GetVariable -Name CACHE_JOB
-  - ps: echo ${env:CACHE_JOB}
-  - ps: echo $env:CACHE_JOB
-  - ps: echo $CACHE_JOB
-  - echo "%CACHE_JOB%"
-  - echo $CACHE_JOB
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
@@ -93,5 +70,6 @@ build_script:
       dir &&
       7z x blobs.zip
     )
+build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
   - bash -ilc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
