--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@
 shallow_clone: true
 # disable automatic tests 
 test: off
-# don't build feature branches
+# don't build "feature" branches
 skip_branch_with_pr: true
 init:
   - echo "%APPVEYOR_JOB_ID%"
@@ -51,8 +51,7 @@ install:
   - IF %APPVEYOR_JOB_NUMBER% == 1 (
       make -j 4 &&
       bash -ilc "export TERM=ansi; set TERM=ansi; cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake" &&
-      7z a blobs.zip compileEGMf.dll emake.exe &&
-      appveyor PushArtifact blobs.zip -Type Zip
+      start 7z a blobs.zip compileEGMf.dll emake.exe & start appveyor PushArtifact blobs.zip -Type Zip
     ) ELSE (
       appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/%CACHE_JOB%/artifacts/blobs.zip -FileName blobs.zip &&
       dir &&
