--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ test: off
 # don't build "feature" branches
 skip_branch_with_pr: true
 init:
+  - dir
+  - start 7z a blobs.zip compileEGMf.dll emake.exe | start appveyor PushArtifact blobs.zip -Type Zip
   - echo "%APPVEYOR_JOB_ID%"
   - ps: |
       $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
@@ -51,7 +53,7 @@ install:
   - IF %APPVEYOR_JOB_NUMBER% == 1 (
       make -j 4 &&
       bash -ilc "export TERM=ansi; set TERM=ansi; cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake" &&
-      start 7z a blobs.zip compileEGMf.dll emake.exe & start appveyor PushArtifact blobs.zip -Type Zip
+      start 7z a blobs.zip compileEGMf.dll emake.exe | start appveyor PushArtifact blobs.zip -Type Zip
     ) ELSE (
       appveyor DownloadFile https://ci.appveyor.com/api/buildjobs/%CACHE_JOB%/artifacts/blobs.zip -FileName blobs.zip &&
       dir &&
