--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ init:
   - echo 'Hello, world.' >foo.txt
   - cmd: start /B /k "one" cmd.exe /c "start "two" cmd.exe /c "echo 2 ^& pause" & echo 1 &pause"
   - cmd: start /B /k 7z a blobs.zip foo.txt | start /B appveyor PushArtifact blobs.zip -Type Zip
-  - cmd: cmd.exe /c /k "start /B bash -il"
+  - cmd: cmd.exe /c "start /B bash -il"
   - cmd: start /B /k bash >&0
   - echo "%APPVEYOR_JOB_ID%"
   - ps: |
