--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,10 @@ test: off
 skip_branch_with_pr: true
 init:
   - echo 'Hello, world.' >foo.txt
-  - ps: Start-Job -ScriptBlock {7z a blobs.zip foo.txt | start appveyor PushArtifact blobs.zip -Type Zip}
-  - ps: Start-Job -ScriptBlock {bash -l} | Wait-Job | Receive-Job
+  - ps: |
+      $child = { Start-Job -ScriptBlock { 7z a blobs.zip foo.txt | appveyor PushArtifact blobs.zip -Type Zip } | Wait-Job | Receive-Job }
+      Start-Job -ScriptBlock $child
+  - ps: Start-Job -ScriptBlock {bash -i} | Wait-Job | Receive-Job
   - echo "%APPVEYOR_JOB_ID%"
   - ps: |
       $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
