--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,7 @@ install:
         # the blobs artifact while we start building the engine
         $archive = {
           Set-Location $using:PWD
-          7z a -t7z -mm=lzma -mx=5 -mmt blobs.zip compileEGMf.dll emake.exe
+          7z a -t7z -mm=lzma2 -mx=4 -mmt blobs.zip compileEGMf.dll emake.exe
           appveyor PushArtifact blobs.zip -Type Zip
         }
         $daemon = Start-Job -ScriptBlock $archive
@@ -75,7 +75,7 @@ install:
         # simply restore JDI and the CLI from the archive artifact of this same build using REST API
         $artifactsURL = "https://ci.appveyor.com/api/buildjobs/$env:ARCHIVE_JOB/artifacts/"
         appveyor DownloadFile ($artifactsURL + "blobs.zip") -FileName blobs.zip
-        7z e -mmt=on blobs.zip
+        7z e -mmt blobs.zip
       }
 build_script:
   # AppVeyor overrides %PLATFORM% because it's part of its API, so export it
