--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL1/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL1/Makefile
@@ -1,7 +1,8 @@
 SOURCES += $(wildcard Graphics_Systems/OpenGL1/*.cpp) $(wildcard Graphics_Systems/General/*.cpp)
 
 ifeq ($(PLATFORM), Win32)
-	LDLIBS += -lopengl32 -lglu32 -lglew32
+	override CXXFLAGS += -DGLEW_STATIC
+	LDLIBS += -lglew32 -lopengl32 -lglu32
 else ifeq ($(PLATFORM), xlib)
 	LDLIBS += -lGL -lGLU -lGLEW
 else ifeq ($(PLATFORM), Cocoa)
